--- a/src/common/email-templates/views/forgot-password.hbs
+++ b/src/common/email-templates/views/forgot-password.hbs
@@ -9,7 +9,8 @@
   </tr>
   <tr>
     <td style="text-align: center;">
-      <a href="{{frontUrl}}/restore-password/{{actionToken}}">RESTORE</a>
+      <a href="{{activationUrl}}">
+      </a>
     </td>
   </tr>
 </table>
