--- a/src/common/email-templates/views/activate.hbs
+++ b/src/common/email-templates/views/activate.hbs
@@ -13,7 +13,7 @@
   </tr>
   <tr>
     <td style="text-align: center;">
-      <a href="{{frontUrl}}/activate/{{actionToken}}">
+      <a href={{activationUrl}}>
       </a>
     </td>
   </tr>
