--- a/src/email-templates/activate.hbs
+++ b/src/email-templates/activate.hbs
@@ -24,21 +24,10 @@
 <div class="content">
     <table style="width: 100%; padding: 45px 35px; box-sizing: border-box">
       <tr>
-        <td style="font-size: 18px; text-align: center;">
-          {{name}}, Welcome on our platform!
-        </td>
-      </tr>
-      <tr>
         <td style="text-align: center;">
           <p style="margin: 17px 0 0;">
-            To activate your account, please click on the link below:
+            To activate your account, please click on the link: {{activationUrl}}
           </p>
-        </td>
-      </tr>
-      <tr>
-        <td style="text-align: center;">
-          <a href={{activationUrl}}>
-          </a>
         </td>
       </tr>
     </table>
