--- a/src/templates/email-templates/activate.hbs
+++ b/src/templates/email-templates/activate.hbs
@@ -77,7 +77,8 @@
       <h1></h1>
     </div>
     <div class="email-body">
-      <p>To activate your account, please click on the link: {{activationUrl}} </p>
+      <p>To activate your account, please click on the link:</p>
+      <a href="{{activationUrl}}"> <button>ACTIVATE</button> </a>
     </div>
     <div class="email-footer">
       <p></p>
