--- a/src/templates/email-templates/recovery-password.hbs
+++ b/src/templates/email-templates/recovery-password.hbs
@@ -34,6 +34,7 @@
     <tr>
       <td style="text-align: center;">
         <a href="{{activationUrl}}">
+          <button>RESTORE</button>
         </a>
       </td>
     </tr>
