add refresh token service

--- a/templates/recovery-password.hbs
+++ b/templates/recovery-password.hbs
@@ -33,7 +33,7 @@
     </tr>
     <tr>
       <td style="text-align: center;">
-        <a href="{{activationUrl}}">
+        <a href="{{recoveryUrl}}">
           <button>RESTORE</button>
         </a>
       </td>
